# mavsdktest

./: CMakeLists.txt  README.md  main.cpp
include/mavsdk/: plugin_base.h
include/mavsdk/plugins/mavlink_passthrough/mavlink/v2.0/common/: common.h  mavlink.h  version.h
include/mavsdk/plugins/mavlink_passthrough/mavlink/v2.0/minimal/: mavlink.h  minimal.h  version.h
